Actions
Bug #12533
closedcfgadm_plugins: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
Build errors with NULL pointer:
../common/mema.c: In function 'info_set': ../common/mema.c:1303: error: assignment makes integer from pointer without a cast ../common/mema.c: In function 'mema_cvt': ../common/mema.c:1373: error: assignment makes integer from pointer without a cast ../common/mema.c:1374: error: assignment makes integer from pointer without a cast ../common/cfga.c: In function 'info_set': ../common/cfga.c:1275: error: assignment makes integer from pointer without a cast ../common/cfga.c: In function 'info_set': ../common/cfga.c:1277: error: assignment makes integer from pointer without a cast ../common/cfga.c: In function 'sysc_cvt': ../common/cfga.c:1341: error: assignment makes integer from pointer without a cast ../common/cfga.c:1342: error: assignment makes integer from pointer without a cast
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 13c31a0ee516ab913296f7367d3c09a79ff3ba21
commit 13c31a0ee516ab913296f7367d3c09a79ff3ba21 Author: Toomas Soome <tsoome@me.com> Date: 2020-04-24T17:57:36.000Z 12533 cfgadm_plugins: NULL pointer errors Reviewed by: Gary Mills <gary_mills@fastmail.fm> Approved by: Dan McDonald <danmcd@joyent.com>
Actions